# truthlayer

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  next.config.ts  package-lock.json  package.json  pyproject.toml
app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
app/benchmark/: page.tsx
app/research/: page.tsx
components/: AcceptanceGate.tsx  AnswerPanel.tsx  CitationBadge.tsx  SearchBar.tsx  SourcesSidebar.tsx
docs/: research-brief.md
experiments/: offline_graph_gate_eval.py  requirements.txt  run_llama_before_after.py
experiments/common/: cost.py  data.py  metrics.py  tables.py
experiments/e1_external_validation/: ablation.py  compose_tiered_minicheck.py  finish_minicheck.py  harness.py  make_tables.py  run_all.sh  run_minicheck.py  run_nli.py  run_signals.py  run_tafs.py  run_tiered.py  run_tiered_tafs.py  signal_accuracy.py
experiments/e2_vag/: grade_e2.py  run_e2.py
experiments/e3_stage2/: eval_decompose.py  eval_roundtrip.py
experiments/figures/: make_e2_bars.py  make_pareto.py  make_signal_accuracy_bars.py  make_signal_bars.py  style.py
lib/: truthlayer-graph.ts  truthlayer.ts
paper/: README.md  references.bib  truthlayer_graph_gated_vag.md  truthlayer_graph_gated_vag.tex
public/: benchmark-data.json
tests/: test_python_core.py
truthlayer/: __init__.py  benchmark.py  cli.py  decompose.py  embedding.py  evidence.py  gate.py  graph.py  pipeline.py  roundtrip.py  signals.py  text.py  types.py  vag.py
truthlayer_llama/: __init__.py  adapter.py  evidence_graph.py  llama_wrapper.py  logits_processor.py
(+33 files in other folders)
